finalizado no inicio

--- a/01-github-explorer/src/styles/global.scss
+++ b/01-github-explorer/src/styles/global.scss
@@ -13,3 +13,12 @@ body{
         font-size: 80px;
     }
 }
+
+body, input, textarea, button{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
+
+h1,h2,h3,h4,h5,h6, strong{
+    font-weight: 600;
+}
