--- a/my_app/src/components/Task.css
+++ b/my_app/src/components/Task.css
@@ -8,3 +8,14 @@ justify-content: space-between;
 color: #eee;
 align-items: center;
 }
+
+.task.title{
+    cursor: pointer;
+}
+
+.remove-task-button{
+    background-color: #444;
+    border: none;
+    font-size: 24px;
+    color: chartreuse;
+}
