--- a/ignite-rocketseat/src/components/Post.module.css
+++ b/ignite-rocketseat/src/components/Post.module.css
@@ -91,3 +91,37 @@
     line-height: 1.4;
     margin-top: 1rem;
 }
+
+.commentForm footer {
+    visibility: hidden;
+    max-height: 0;
+    
+}
+
+.commentForm:focus-within footer{
+    visibility: visible;
+    max-height: none;
+    
+}
+
+.commentForm button[type=submit] {
+    padding: 1rem 1.5rem;
+    margin-top: 1rem;
+    border-radius: 8px;
+    border: 0;
+    background: var(--green-500);
+    color: var(--white);
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.1s;
+
+
+}
+
+.commentForm button[type=submit]:hover {
+    background: var(--green-300);
+}
+
+.commentList{
+    margin-top: 2rem;
+}
