--- a/ignite-rocketseat/src/global.css
+++ b/ignite-rocketseat/src/global.css
@@ -12,12 +12,18 @@
     --green-300: #00B37E;
     --green-500: #00875f;
 
+    --red-500: #F75A68;
 }
 
 body {
     background: var(--gray-900);
     color: var(--gray-300);
     -webkit-font-smoothing: antialiased;
+}
+
+:focus {
+    outline: transparent;
+    box-shadow: 0 0 0 2px var(--green-500);
 }
 
 * {
