--- a/ignite-rocketseat/src/components/Post.module.css
+++ b/ignite-rocketseat/src/components/Post.module.css
@@ -110,8 +110,13 @@
 
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:hover:not(:disabled):hover {
     background: var(--green-300);
+}
+
+.commentForm button[type=submit]:disabled{
+    opacity: 0.7;
+    cursor: not-allowed;
 }
 
 .commentList{
